Revert "fix: Postcard list spacing"
This reverts commit 51b78029eeb54f5ea055dc47916b6e2b63a8cb0f.

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -29,7 +29,6 @@ $max_width: 42em; // arbitrary. but nice!
     .info {
         width: 100%;
         box-sizing: border-box;
-        padding: 0 2.4em;
 
         display: grid;
         grid-template-columns: auto auto;
